fixed overflow

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -87,6 +87,9 @@ body {
 }
 /* media queries */
 @media screen and (max-width: 600px) {
+  body {
+    overflow-x: hidden;
+  }
   .team-image {
     display: none;
   }
